fix: only set overflow-y to scroll

--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -11,7 +11,7 @@ SIDEBAR STYLES
   left: 0;
   bottom: 0;
   width: var(--sidebar-width);
-  overflow: scroll;
+  overflow-y: auto;
   z-index: 3;
   transform: translateX(-110vw);
   transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), visibility 0s linear 0.6s;
